# gz_ogre_next_vendor-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  gz_ogre_next_vendor-extras.cmake.in  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  copyright  gbp.conf  rules
patches/: 0001-Fix-incomplete-vulkan-linkage.patch  0002-cxx20-constexpr-stlallocator.patch
rpm/: ros-lyrical-gz-ogre-next-vendor.spec  ros-rolling-gz-ogre-next-vendor.spec  template.spec
